resolved async error

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Formula Variasi</title><script src=https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js></script><link href=/carwash-webapp/assets/css/app.34134bcc454571c96ac932b9f683cd31.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/carwash-webapp/assets/js/manifest.c40a403abe6a25a29fbf.js></script><script type=text/javascript src=/carwash-webapp/assets/js/vendor.f60543e87d2f0d9ba2f0.js></script><script type=text/javascript src=/carwash-webapp/assets/js/app.d923648304bfd9e76c22.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Formula Variasi</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+
+</html>
